[package]
name = "ipnet-trie"
version = "0.2.0-beta.1"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
license = "MIT"
keywords = ["ip", "network", "address", "bgp", "trie"]
categories = ["network-programming", "data-structures"]
readme = "README.md"
repository = "https://github.com/bgpkit/ipnet-trie"
homepage = "https://github.com/bgpkit/ipnet-trie"
documentation = "https://docs.rs/ipnet-trie"
description = """
IPv4 and IPv6 network fast lookup trie.
"""
edition = "2021"

[dependencies]
ipnet = "2.8"
prefix-trie = "0.2.5"
bincode = { version = "2.0.0-rc", optional = true }

[features]
default = []
export = ["bincode"]

[dev-dependencies]
criterion = "0.5"
oneio = "0.16"
tempdir = "0.3"
bgpkit-parser = "0.10.0"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "bgp-rib-trie-export"
required-features = ["export"]
