[package]
name = "ipnet-trie"
version = "0.3.0"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
license = "MIT"
keywords = ["ip", "network", "address", "bgp", "trie"]
categories = ["network-programming", "data-structures"]
readme = "README.md"
repository = "https://github.com/bgpkit/ipnet-trie"
homepage = "https://github.com/bgpkit/ipnet-trie"
documentation = "https://docs.rs/ipnet-trie"
description = """
IPv4 and IPv6 network fast lookup trie.
"""
edition = "2021"

[dependencies]
ipnet = "2.8"
prefix-trie = "0.6"
bincode = { version = "2.0", optional = true }

[features]
default = []
export = ["bincode"]

[dev-dependencies]
criterion = "0.5"
oneio = "0.17"
tempdir = "0.3"
bgpkit-parser = "0.11"
anyhow = "1.0"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "bgp-rib-trie-export"
required-features = ["export"]
